update button next page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </div>
 </div>
 <button id="scroll10Btn" title="Scroll 10 ảnh">🔽</button>
+<button id="nextPageBtn" title="Next page">▶️</button>
 
 
 
